# pgwal-client

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pylintrc  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_test.txt  setup.cfg
.github/workflows/: ci.yml
docker/: init.sql  psql.test.Dockerfile
lib/: requirements.txt
lib/src/pgwal/: __init__.py  app.py  consumers.py  errors.py  interface.py  publishers.py
pgwal/: __init__.py  constants.py  consumers.py  errors.py  events.py  interface.py  publishers.py
pgwal/publishers/: __init__.py  base.py  kafka.py  rabbitmq.py  shell.py
tests/: __init__.py  conftest.py  test_consumers.py  test_interface.py
